--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "docs": "jsdoc index.js -d ./docs",
-    "test": "intern"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -23,10 +23,17 @@
   },
   "homepage": "https://github.com/sporkbytes/Money#readme",
   "devDependencies": {
-    "intern": "^4.3.1",
+    "jest": "^24.8.0",
     "jsdoc": "^3.5.5"
   },
   "dependencies": {
     "@sporkbytes/math-utils": "^1.0.0"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "index.js",
+      "!**/node_modules/**"
+    ]
   }
 }
