--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "@sporkbytes/money",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A Money datatype to properly handle calculations and avoid floating point errors.",
-  "main": "index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "umdModule": "dist/index.umd.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
+    "build": "rm -rf ./dist && rollup -c",
     "docs": "jsdoc index.js -d ./docs",
-    "test": "jest --watch"
+    "prepare": "npm run build",
+    "test": "NODE_ENV=test jest"
   },
   "repository": {
     "type": "git",
@@ -23,11 +30,17 @@
   },
   "homepage": "https://github.com/sporkbytes/Money#readme",
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "babel-jest": "^26.1.0",
     "jest": "^24.8.0",
-    "jsdoc": "^3.6.2"
+    "jsdoc": "^3.6.5",
+    "rollup": "^1.10.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-cleanup": "^3.1.1"
   },
   "dependencies": {
-    "@sporkbytes/math-utils": "^1.1.1"
+    "@sporkbytes/math-utils": "^1.1.2"
   },
   "jest": {
     "collectCoverage": true,
