--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist/*"
   ],
   "scripts": {
-    "build": "rm -rf ./dist && rollup -c",
+    "build": "npm test && rm -rf ./dist && rollup -c",
     "docs": "jsdoc index.js -d ./docs",
     "prepare": "npm run build",
     "test": "NODE_ENV=test jest"
