--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "npm test && rm -rf ./dist && rollup -c",
-    "docs": "jsdoc index.js -d ./docs",
+    "docs": "rm -rf ./docs && jsdoc index.js -d ./docs -p",
     "prepare": "npm run build",
     "test": "NODE_ENV=test jest"
   },
